# circular

./: .gitignore  LICENSE  circular.cabal  test.circular
src/: circular.hs  tests.hs
src/Circular/: Evaluation.lhs  Repl.lhs  State.lhs  Syntax.lhs  Typing.lhs
src/Circular/Repl/: Command.lhs  Monad.lhs
src/Circular/Syntax/: Abstract.lhs  Concrete.lhs  LocallyNameless.lhs  NameResolution.lhs  Nominal.lhs  Unbound.lhs
src/Circular/Syntax/Concrete/: Tests.lhs
